--- a/src/app/injector/create-test/create-test.component.html
+++ b/src/app/injector/create-test/create-test.component.html
@@ -21,6 +21,10 @@
       <input matInput [(ngModel)]="tipoInyector"  placeholder="Ingrese el tipo del inyector">
     </mat-form-field>
 
+    <mat-form-field>
+      <input matInput [(ngModel)]="codPrueba"  placeholder="Ingrese codigo de la prueba">
+    </mat-form-field>
+
     <button mat-raised-button color="primary" (click)="createTest()">Guardar</button>
 
     <br>
@@ -32,26 +36,31 @@
 
       <!-- Position Column -->
       <ng-container matColumnDef="prueba">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <th mat-header-cell *matHeaderCellDef> Prueba </th>
         <td mat-cell *matCellDef="let element"> {{element.prueba}} </td>
       </ng-container>
 
       <!-- Name Column -->
       <ng-container matColumnDef="rangoOperacion">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
+        <th mat-header-cell *matHeaderCellDef> Rango de operacion </th>
         <td mat-cell *matCellDef="let element"> {{element.rangoOperacion}} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="datosInyector">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
+        <th mat-header-cell *matHeaderCellDef> Datos del inyector </th>
         <td mat-cell *matCellDef="let element"> {{element.datosInyector}} </td>
       </ng-container>
 
       <!-- Weight Column -->
       <ng-container matColumnDef="tipoInyector">
-        <th mat-header-cell *matHeaderCellDef> Weight </th>
+        <th mat-header-cell *matHeaderCellDef> Tipo inyector </th>
         <td mat-cell *matCellDef="let element"> {{element.tipoInyector}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="codPrueba">
+        <th mat-header-cell *matHeaderCellDef> Codigo de la prueba </th>
+        <td mat-cell *matCellDef="let element"> {{element.codPrueba}} </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
